add tets and test-covarage

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,8 +1,13 @@
+plugins:
+  # https://github.com/jest-community/eslint-plugin-jest
+  - jest
+
 env:
   node: true
 
 extends:
   - 'airbnb-base'
+  - 'plugin:jest/recommended'
 
 parserOptions:
   ecmaVersion: latest
@@ -13,3 +18,4 @@ rules:
     - error
     - ignorePackages
     - js: always
+  no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
