--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "gendiff": "bin/gendiff.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "commander": "^10.0.1",
-    "eslint": "^8.39.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.0.1",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.0.0",
+    "jest": "^29.0.1",
+    "jest-cli": "^29.0.1",
+    "npm-check-updates": "^16.0.6",
+    "simple-git-hooks": "^2.8.0",
+    "commander": "^10.0.1"
   }
 }
