--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "commander": "^10.0.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.0.1",
@@ -24,7 +25,6 @@
     "jest": "^29.0.1",
     "jest-cli": "^29.0.1",
     "npm-check-updates": "^16.0.6",
-    "simple-git-hooks": "^2.8.0",
-    "commander": "^10.0.1"
+    "simple-git-hooks": "^2.8.0"
   }
 }
