--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/DieWerkself/frontend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/DieWerkself/frontend-project-46/actions)",
   "type": "module",
-  "main": "./src/formatters/index.js",
+  "main": "index.js",
   "bin": {
     "gendiff": "bin/gendiff.js"
   },
