--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,4 @@
 plugins:
-  # https://github.com/jest-community/eslint-plugin-jest
   - jest
 
 env:
@@ -14,7 +13,7 @@ parserOptions:
 
 rules:
   no-console: 0
-  import/extensions: # FIXME: remove when rule will be adjusted for new nodejs version
+  import/extensions:
     - error
     - ignorePackages
     - js: always
